styles/style.css
/* Здесь вы напишете основную часть стилей страницы.

Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
✦ theme-dark — класс тёмной темы
✦ theme-light — класс светлой темы
✦ like-icon — для svg-иконки анимированного сердца
✦ card__like-button — для кнопки Like рядом с иконкой
✦ card__icon-button — для кнопки, оборачивающей иконку
✦ card__icon-button — для кнопки, оборачивающей иконку
✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
✦ button__text — для обозначения текстового элемента внутри кнопки

Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.

*/

.page {
  min-inline-size: 320px;
  min-block-size: 100dvb;
  color: var(--main-color);
  background-color: var(--background-color);
  background-image: var(--background-gradient);
  background-size: cover;
  background-attachment: fixed;
  font-family: var(--font-family-main), sans-serif;
  font-variation-settings: "wght" var(--font-weight-main);
  padding-block-start: 100px;
}

.page__section {
  inline-size: var(--container-inline-size);
  margin: auto;
}

.header {
  display: flex;
  flex-direction: column;
  text-align: center;
  border: 2px solid var(--main-color);
  margin-block-end: 100px;
  padding-block-start: var(--padding-header-top);
  font-family: var(--font-family-accent), monospace;
  text-transform: uppercase;
  padding-bottom: 20px;
  background-color: var(--background-color);
}

.header__logo {
  display: block;
  font-size: var(--font-size-logo);
  margin-block-end: 20px;
}

.header__title {
  font-size: var(--font-size-title);
  margin-block-end: 25px;
}

.header__theme-menu {
  margin: 0 auto;
}

.theme-menu__list {
  display: flex;
  flex-direction: column;
  gap: 11px;
  font-size: 14px;
  text-align: left;
  padding-inline-start: 20px;
}

.theme-menu__button {
  position: relative;
  background-color: var(--background-color);
  border: none;
  text-transform: uppercase;
  cursor: pointer;
  transition: opacity 0.3s;
  animation-timing-function: ease;
}

.theme-menu__button::after {
  content: "";
  display: block;
  inline-size: 100%;
  block-size: 2px;
  background-color: var(--main-color);
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.3s;
  animation-timing-function: ease-in-out;
}

.theme-menu__button:focus-visible,
.theme-menu__button:focus {
  opacity: 0.6;
}

.theme-menu__button:focus-visible::after {
  transform: scaleX(1);
}

.theme-menu__button:disabled {
  pointer-events: none;
  opacity: 0.6;
}

.theme-menu__button:disabled::before {
  content: "▶";
  position: absolute;
  top: 0;
  left: -16px;
  animation: pulse 0.5s ease-in-out infinite alternate;
}

.theme-menu__button:hover {
  opacity: 0.6;
}

.cards {
  display: flex;
  flex-direction: column;
  gap: 50px;
  background-color: transparent;
}

.card {
  border: 2px solid var(--main-color);
  background-color: var(--background-color);
}

.card__title {
  font-size: 18px;
  font-variation-settings: "wght" var(--font-weight-accent);
  padding: 4px 10px 6px;
}

.card__image-container {
  position: relative;
  max-height: var(--container-inline-size);
  aspect-ratio: 1/1;
}

.card__image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.card__label {
  position: absolute;
  inset-block-start: 26px;
  inset-inline-end: 25px;
  font-family: var(--font-family-accent), monospace;
  font-size: 14px;
  color: var(--main-color);
  opacity: 0.5;
  mix-blend-mode: hard-light;
  text-shadow: 1px 1px 0 var(--label-outline-color),
    -1px -1px 0 var(--label-outline-color);
}

@supports (
  (-webkit-text-stroke: 1px var(--label-outline-color)) or
    (text-stroke: 1px var(--label-outline-color))
) {
  .card__label {
    -webkit-text-stroke: 1px var(--label-outline-color);
    text-stroke: 1px var(--label-outline-color);
    text-shadow: none;
  }
}

@media (width <= 600px) {
  .card__label {
    inset-block-start: 23px;
    inset-inline-end: 11px;
  }
}

.card__text-container {
  display: flex;
  flex-direction: column;
  gap: 27px;
  padding: 25px 25px 0;
  font-size: 18px;
  line-height: 1.17;
}

.card__bottom-panel {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 24px 25px 26px;
  gap: 5px;
}

.footer {
  margin-block-start: 50px;
  margin-block-end: 100px;
  display: flex;
  justify-content: center;
}

/* Стили, относящиеся ко всем кнопкам и иконкам на сайте, 
кроме тех, которые в хедере */

.like-icon {
  cursor: pointer;
}

.button {
  background-color: var(--background-color);
  border: 2px solid var(--main-color);
  padding: 0;
  cursor: pointer;
  font-family: var(--font-family-accent), monospace;
}

.popup .button {
  inline-size: 100%;
}

.card__icon-button {
  border: 2px solid transparent;
  background-color: transparent;
  padding: 0;
  block-size: var(--like-button-height);
}

.card__icon-button:focus-visible {
  border: 2px solid var(--main-color);
  transition: border 0.3s;
  animation-timing-function: ease;
}

.card__like-button {
  min-width: 130px;
  block-size: var(--like-button-height);
  border: 2px solid var(--main-color);
  font-size: 14px;
}

.button_save,
.button_popup {
  display: flex;
  align-items: center;
  inline-size: 48%;
  gap: 5px;
  font-size: 14px;
}

.button_save {
  padding: 15px 20px;
}

.button_popup {
  padding-block-start: 10px;
  padding-block-end: 10px;
}

.button_popup .button__text {
  margin: 0 auto;
}

.floppy-icon {
  inline-size: 21px;
  block-size: 21px;
}

.popup .floppy-icon {
  inline-size: 39px;
  block-size: 39px;
}

.button__text {
  position: relative;
  z-index: 1;
  mix-blend-mode: difference;
  color: var(--button-text-color);
  font-family: var(--font-family-accent);
}

.popup .button__text {
  text-transform: uppercase;
  font-size: 14px;
  line-height: 1.5;
}

@media (width <= 700px) {
  .button_save {
    flex-direction: column;
    padding: 15px 20px;
    min-inline-size: 306px;
    gap: 8px;
  }

  .floppy-icon {
    inline-size: 28px;
    block-size: 28px;
  }
}

.card__like-button:focus-visible,
.button_save:focus-visible {
  box-shadow: 2px 2px 0 var(--main-color);
  transition: box-shadow 0.3s;
  animation-timing-function: ease-in-out;
}

.button_hover-color-change {
  position: relative;
}

.button_hover-color-change::after {
  content: "";
  position: absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  display: block;
  inline-size: 100%;
  block-size: 100%;
  background-color: var(--main-color);
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.5s;
  animation-timing-function: ease-in-out;
}

.button_hover-color-change:hover::after {
  transform: scaleX(1);
}

/* Стили, относящиеся к модальному окну */

.popup {
  padding: var(--popup-padding);
  inline-size: var(--popup-inline-size);
  background-color: var(--background-color);
  border: 2px solid var(--main-color);
}

.popup::backdrop {
  background: var(--overlay-color);
}

.popup__content {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.popup__instruction {
  display: flex;
  gap: 20px;
  align-items: center;
}

.filter-brightness {
  filter: brightness(120%);
}

.filter-inverted {
  filter: invert(100%);
}

.filter-hue-rotate {
  filter: hue-rotate(180deg);
}

.filter-saturated {
  filter: saturate(250%);
}

.filter-sepia {
  filter: sepia(100%);
}

.filter-grey {
  filter: grayscale(80%);
}

.filter-sharpen {
  filter: contrast(140%) grayscale(55%);
}

.filter-soften {
  filter: sepia(30%) blur(1px) brightness(190%);
}

